# django-fsc-example

./: .gitignore  MANIFEST.in  README.rst  setup.cfg
fscexample/: apps.py  models.py  urls.py  views.py
fscexample/migrations/: 0001_initial.py
fscexample/static/fscexample/: fsc-example.mjs
fscexample/templatetags/: fscexample_tags.py
